--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<section id="main">
 						<header>
 							<span class="avatar"><img src="https://danbee.ai/platform/img/chatbot/img_profile_db_1.png" alt="" /></span>
-							<h1>까망씨</h1>
+							<h1>까망커피, 까망씨</h1>
 							<p>고급 커피를 홍보하는 귀여운 고양이</p>
 						</header>
 						<hr />
